2011-08-30  Paul Eggert  <eggert@cs.ucla.edu>

	sprintf-related integer and memory overflow issues (Bug#9412).

	* doprnt.c (doprnt): Support printing ptrdiff_t and intmax_t values.
	(esprintf, esnprintf, exprintf, evxprintf): New functions.
	* keyboard.c (command_loop_level): Now EMACS_INT, not int.
	(cmd_error): kbd macro iterations count is now EMACS_INT, not int.
	(modify_event_symbol): Do not assume that the length of
	name_alist_or_stem is safe to alloca and fits in int.
	(Fexecute_extended_command): Likewise for function name and binding.
	(Frecursion_depth): Wrap around reliably on integer overflow.
	* keymap.c (push_key_description): First arg is now EMACS_INT, not int,
	since some callers pass EMACS_INT values.
	(Fsingle_key_description): Don't crash if symbol name contains more
	than MAX_ALLOCA bytes.
	* minibuf.c (minibuf_level): Now EMACS_INT, not int.
	(get_minibuffer): Arg is now EMACS_INT, not int.
	* lisp.h (get_minibuffer, push_key_description): Reflect API changes.
	(esprintf, esnprintf, exprintf, evxprintf): New decls.
	* window.h (command_loop_level, minibuf_level): Reflect API changes.

	* dbusbind.c (signature_cat): New function.
	(xd_signature, Fdbus_register_signal):
	Do not overrun buffer; instead, report string overflow.

	* dispnew.c (add_window_display_history): Don't overrun buffer.
	Truncate instead; this is OK since it's just a log.

	* editfns.c (Fcurrent_time_zone): Don't overrun buffer
	even if the time zone offset is outlandishly large.
	Don't mishandle offset == INT_MIN.

	* emacs.c (main) [NS_IMPL_COCOA]: Don't overrun buffer
	when creating daemon; the previous buffer-overflow check was incorrect.

	* eval.c (verror): Simplify by rewriting in terms of evxprintf,
	which has the guts of the old verror function.

	* filelock.c (lock_file_1, lock_file): Don't blindly alloca long name;
	use SAFE_ALLOCA instead.  Use esprintf to avoid int-overflow issues.

	* font.c: Include <float.h>, for DBL_MAX_10_EXP.